--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            padding: 20px 0;
+            /* ★ 移除所有 Padding，讓圖片可以真正滿版 */
+            padding: 0;
             box-sizing: border-box;
             visibility: hidden; 
             opacity: 0;
@@ -345,7 +346,8 @@
             top: 0; left: 0;
             width: 100%; height: 100%;
             object-fit: contain;
-            padding: 0 10px; 
+            /* ★ 移除圖片內縮 padding: 0 10px */
+            padding: 0; 
             box-sizing: border-box;
             transform: translate3d(0, 0, 0);
             will-change: transform, opacity;
