--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="shortcut icon" href="weblogo.png">
 
     <style>
+        /* ★ 修正 1: 全域 Box-sizing 設定，解決置中偏移問題 */
+        * {
+            box-sizing: border-box;
+        }
+
         :root {
             --bg-color: #000000;
             --text-color: #ffffff;
@@ -332,7 +337,6 @@
             width: 100%; height: 100%;
             object-fit: contain;
             padding: 0; 
-            box-sizing: border-box;
             transform: translate3d(0, 0, 0);
             will-change: transform, opacity;
             transition: transform 0.3s ease;
@@ -466,8 +470,8 @@
             <a id="download-btn" href="#" target="_blank" class="btn" download>
                 <span>↓</span> 下載原始檔 / Download Original
             </a>
-            <!-- ★ 修改：更新引導文字 -->
-            <p style="font-size: 12px; color: #ccc; margin: 8px 0 0 0; text-shadow: 0 1px 2px rgba(0,0,0,0.8);">手機請直接長按圖片儲存 / 電腦請點擊按鈕下載</p>
+            <!-- ★ 修正 2: 強制文字置中 -->
+            <p style="font-size: 12px; color: #ccc; margin: 8px 0 0 0; text-shadow: 0 1px 2px rgba(0,0,0,0.8); text-align: center;">手機請直接長按圖片儲存 / 電腦請點擊按鈕下載</p>
         </div>
     </div>
 
