--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <!-- 2. 加入主畫面教學視窗 (動態內容) -->
     <div id="pwa-modal" class="modal-overlay">
         <div class="modal-box">
-            <div class="modal-title">獲得最佳瀏覽體驗</div>
+            <div class="modal-title" id="pwa-title">獲得最佳瀏覽體驗</div>
             <!-- 內容會由 JS 根據裝置替換 -->
             <div id="pwa-instructions" class="modal-text"></div>
             <div class="modal-buttons">
@@ -373,6 +373,7 @@
         const ageModal = document.getElementById('age-modal');
         const pwaModal = document.getElementById('pwa-modal');
         const pwaInstructions = document.getElementById('pwa-instructions');
+        const pwaTitle = document.getElementById('pwa-title');
 
         // ★ 功能 1: 年齡確認
         function checkAge() {
@@ -394,7 +395,7 @@
             window.location.href = "https://www.google.com";
         }
 
-        // ★ 功能 2: 自動裝置偵測 & PWA 提示 (修正：電腦版不顯示)
+        // ★ 功能 2: 自動裝置偵測 & PWA / In-App 提示
         function checkPWA() {
             const isDismissed = localStorage.getItem('pwaPromptDismissed');
             if (isDismissed === 'true') return;
@@ -402,27 +403,44 @@
             const isStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone;
             if (isStandalone) return;
 
-            // 判斷裝置
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            const isIOS = /iPad|iPhone|iPod/.test(userAgent) && !window.MSStream;
-            const isAndroid = /Android/.test(userAgent);
+            // 判斷裝置與瀏覽器
+            const ua = navigator.userAgent || navigator.vendor || window.opera;
+            const isIOS = /iPad|iPhone|iPod/.test(ua) && !window.MSStream;
+            const isAndroid = /Android/.test(ua);
+            
+            // 偵測 In-App Browser (LINE, Instagram, Facebook)
+            const isInApp = /Instagram|Line|FBAN|FBAV/i.test(ua);
 
-            // ★ 新增：如果是電腦版 (非 iOS 也非 Android)，直接結束，不顯示視窗
+            // 如果是電腦版 (非 iOS 也非 Android)，不顯示
             if (!isIOS && !isAndroid) return;
 
-            // 準備圖示 (SVG)
-            const iconShare = `<svg class="inline-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>`;
+            // 準備 SVG 圖示
+            // 分享圖示 (方塊+箭頭)
+            const iconShare = `<svg class="inline-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line><polyline points="9 5 12 2 15 5"></polyline></svg>`;
+            // 加號圖示 (方塊+加號)
             const iconPlus = `<svg class="inline-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="18" height="18" rx="4" ry="4"></rect><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>`;
+            // 選單圖示 (三點)
             const iconMenu = `<svg class="inline-icon" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>`;
 
             // 設定對應文案
-            if (isIOS) {
+            if (isInApp) {
+                // 如果是 In-App Browser，提示跳轉
+                pwaTitle.innerText = "建議使用系統瀏覽器";
+                pwaInstructions.innerHTML = `
+                    您目前正在使用 App 內建瀏覽器，<br>可能無法順利下載或加入主畫面。<br><br>
+                    請點擊選單 ${iconMenu} 或分享圖示，<br>
+                    並選擇 <b>「使用預設瀏覽器開啟」</b><br>
+                    (如 Safari 或 Chrome)
+                `;
+            } else if (isIOS) {
+                // iOS Safari
                 pwaInstructions.innerHTML = `
                     將此網站加入主畫面，享受全螢幕體驗。<br><br>
                     1. 點擊下方工具列的 <b>分享</b> ${iconShare}<br>
                     2. 選擇 <b>加入主畫面</b> ${iconPlus}
                 `;
             } else if (isAndroid) {
+                // Android Chrome
                 pwaInstructions.innerHTML = `
                     將此網站加入主畫面，享受全螢幕體驗。<br><br>
                     1. 點擊瀏覽器右上角選單 ${iconMenu}<br>
